cmake_minimum_required(VERSION 3.13)
project(Clion_CPPFoundation_Day01)

set(CMAKE_CXX_STANDARD 14)

add_executable(Clion_CPPFoundation_Day01 "01 hello world.cpp" "02 双冒号作用域运算符.cpp" "03 namespace的使用.cpp" game1.h game1.cpp game2.h game2.cpp "04 using声明和using编译指令.cpp" "05 C++对C语言的增强C语言.c" "06 C++对C语言的增强C++.cpp" "10 引用的基本语法.cpp" "11 参数的传递方式.cpp" "12 指针的引用.cpp" "13 常量引用.cpp")